<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="viewModel"
    type="com.esv.tripplanner.viewModels.PointOfInterestVisitPlansViewModel" />


        <import type="com.esv.tripplanner.binding_converters.BindingConverters"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/poiVisitTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/timeSpent"
            android:inputType="numberDecimal"
            android:text="@={ BindingConverters.doubleToString(viewModel.poiVisitPlan.visitTimeHrs)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeSelector" />

        <Spinner
            android:id="@+id/placeSelector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:selectedSpinnerItem = "@={viewModel.selectedPoi}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeLabel"
            tools:listitem="@layout/point_of_interest_layout" />

        <TextView
            android:id="@+id/placeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/placeToVisit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="@={viewModel.poiVisitPlan.startPoint}"
            android:text="@string/startPoint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poiVisitTime" />

        <Button
            android:id="@+id/addNewPlace"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:text="@string/addButtonLabel"
            android:onClick="@{()->viewModel.addNewPoi()}"
            app:layout_constraintBottom_toBottomOf="@+id/placeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/placeLabel" />

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Save"
            android:onClick="@{()->viewModel.saveVisitPlan()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch1" />

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="?attr/removeItem"
            android:text="@string/Cancel"
            android:onClick="@{()->viewModel.cancel()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>